vps_oracle/k3s/apps/hello/k8s/waypoint-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waypoint-metrics
  namespace: pr-lanes
spec:
  type: NodePort
  selector:
    gateway.networking.k8s.io/gateway-name: waypoint
  ports:
    - port: 15090
      targetPort: 15090
      nodePort: 30112
      name: http-envoy-prom
